# ags-service-publisher-gui

./: .flake8  .gitignore  README.md  ags_service_publisher_gui_pro.spec  build.bat  build.py  buildtemplates.bat  codesigning.bat  requirements-build.txt  requirements.txt  setup.cfg  setup.py
hooks/: hook-archook.py  hook-arcpy.py
hooks/pre_find_module_path/: hook-PyQt5.py  hook-PySide2.py
hooks/rthooks/: pyi_rth_arcpy.py  pyi_rth_multiprocessing.py  pyi_rth_pyqt4.py
src/: main.pyw
src/aboutdialog/: __init__.py  aboutdialog.py  aboutdialog.ui
src/agsspgui/aboutdialog/: __init__.py  aboutdialog.py  aboutdialog.ui
src/agsspgui/aprxconverterdialog/: __init__.py  aprxconverterdialog.py  aprxconverterdialog.ui
src/agsspgui/datasetusagesreportdialog/: __init__.py  datasetusagesreportdialog.py  datasetusagesreportdialog.ui
src/agsspgui/datastoresreportdialog/: __init__.py  (+2 more)
src/datasetusagesreportdialog/: __init__.py  datasetusagesreportdialog.ui
src/datastoresreportdialog/: __init__.py
src/helpers/: arcpyhelpers.py  pathhelpers.py  texthelpers.py
src/loghandlers/: qtloghandler.py  textwindowloghandler.py
src/mainwindow/: __init__.py  mainwindow.py  mainwindow.ui
src/mxdreportdialog/: __init__.py  mxdreportdialog.py  mxdreportdialog.ui
src/publishdialog/: __init__.py  publishdialog.py  publishdialog.ui
src/resultdialog/: __init__.py
src/serviceselector/: __init__.py
src/servicetree/: __init__.py
src/widgets/: plaintexteditwithplaceholdertext.py
src/workers/: subprocessworker.py  subprocessworkerpool.py  worker.py  workerpool.py
(+20 files in other folders)
