[metadata]
name = ags-service-publisher-gui
summary = A desktop application for publishing services to ArcGIS Server 
url = https://github.com/cityofaustin/ags-service-publisher-gui
license = CC0
author = Logan Pugh
author_email = logan.pugh@austintexas.gov

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
